Implemented email confirmation. Needs testing.

--- a/mailer/views/email-confirmation/html.pug
+++ b/mailer/views/email-confirmation/html.pug
@@ -1,5 +1,5 @@
 extends ../layouts/default.pug
 
 block content
-  p #{token}'s Pug source code!
+  a(href=`/confirm-email?token=${token}&id=${id}`) Confirm email
 
